<resources>
    <string name="app_name">ToolsTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="cAction">Choose action</string>
    <string name="action_settings">Settings</string>
    <string name="request_title">Create new request</string>
    <string name="mRClient_s">Client name</string>
    <string name="mRClient_hint">Important company</string>
    <string name="mRDate_s">Needed on Date</string>
    <string name="mRFE_s">SSO</string>
    <string name="mRFE_hint">Your SSO number</string>
    <string name="mRFFEM_s">FFEM</string>
    <string name="mRLocation_s">Location</string>
    <string name="mRLocation_title">Enter location</string>
    <string name="mRNumber_s">Quantity</string>
    <string name="mRNumber_title">Enter quantity</string>
    <string name="mRSeverity_s">Severity</string>
    <string name="title_activity_display_master_tools">DisplayMasterToolsActivity</string>
    <string name="title_activity_display_requests">DisplayRequestsActivity</string>
</resources>
