<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ge.toolstracker.DisplayRequestDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mRClient_s"
                android:id="@+id/dClient"
                android:password="false"
                android:paddingTop="15dp"
                android:layout_below="@+id/textView2"
                android:layout_alignParentLeft="true"
                style="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mRDate_s"
                android:id="@+id/textView4"
                android:password="false"
                android:paddingTop="15dp"
                android:layout_below="@+id/editText2"
                android:layout_alignParentLeft="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/dDate"
                android:layout_below="@+id/textView4"
                android:layout_alignParentLeft="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Requested by"
                android:id="@+id/textView12" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/dSSO"
                android:hint="@string/mRFE_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mRLocation_s"
                android:id="@+id/textView13" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dLocation"
                android:hint="@string/mRLocation_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mRFFEM_s"
                android:id="@+id/textView14" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dFFEM" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/mRSeverity_s"
                android:id="@+id/textView15" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dSeverity"
                android:numStars="3"
                android:stepSize="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Status"
                android:id="@+id/dStatusDesc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="SHIPPED"
                android:id="@+id/dStatus" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Confirm tools arrival"
                android:id="@+id/confirm"
                android:background="#30b227"
                android:visibility="gone"
                android:onClick="confirmRequest" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
