<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/request_title"
            android:id="@+id/textView2"
            android:layout_below="@+id/scrollView"
            android:layout_toRightOf="@+id/scrollView"
            android:layout_toEndOf="@+id/scrollView"
            android:textColor="#17c250" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/mRClient_s"
            android:id="@+id/textView3"
            android:layout_below="@+id/editText"
            android:layout_toRightOf="@+id/scrollView"
            android:layout_toEndOf="@+id/scrollView"
            android:password="false"
            android:paddingTop="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_below="@+id/scrollView"
            android:layout_toRightOf="@+id/scrollView"
            android:layout_toEndOf="@+id/scrollView"
            android:layout_marginTop="39dp"
            android:hint="@string/mRClient_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/mRDate_s"
            android:id="@+id/textView4"
            android:layout_below="@+id/editText"
            android:layout_toRightOf="@+id/scrollView"
            android:layout_toEndOf="@+id/scrollView"
            android:password="false"
            android:paddingTop="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editText3" />

    </LinearLayout>

</RelativeLayout>